--- a/dogs.html
+++ b/dogs.html
@@ -15,7 +15,7 @@
         <form>
             <label for="dog-entry">Generate Dogs!</label>
             <input type="text" name="dog-entry" class="dogImage">
-            <button type="submit">Look Up Dog</button>
+            <button type="submit" class="dog-submit js-dog-submit">Look Up Dog</button>
         </form>
     </article>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
