--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
     <article>
-        <h1>Enter A Number of Dogs! (1-50)</h1>
+        <h1>Enter a Number: 1-50</h1>
         <form>
             <label for="dog-entry">Generate Dogs!</label>
-            <input type="text" name="dog-entry" class="dogImage">
-            <button type="submit" class="dog-submit js-dog-submit">Look Up Dog</button>
+            <input type="text" name="dogEntry" class="dogImage">
+            <input type="submit" value="Look up number of dogs" class="dog-submit js-dog-submit">
         </form>
+        <div class="default-images"></div>
     </article>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="dogs.js"></script> 
